feat: pool-and-repack bundle packing by item type
Replace the candidate-by-candidate bundle loop with a single pool-based
repack: dissolve every eligible item (loose and in-bundle, main storage
and hotbar) into a pool keyed by item type, then repack from scratch.
Full stacks go to the inventory; a remainder goes into the fullest
bundle that fits (best-fit, current-bundle preference) when its weight
is <=32, else stays loose. Pure function of the item multiset, so a
second run is a no-op.

- Hotbar bundles are now valid bins; hotbar items are never touched.
- Locked slots (item or bundle) are excluded entirely.
- Tops up the inventory to full stacks by pulling from bundles, and
  consolidates duplicate bundle stacks across bundles.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>