@@ -7,17 +7,65 @@ import org.bukkit.inventory.meta.BundleMeta;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Tests for {@link BundlePacker}: weight math, FFD packing, entry-cap enforcement,
- * canBundle rules, and atomicity (no stack splitting).
+ * Tests for {@link BundlePacker}: weight math, the {@code canBundle} rules, and the pool-and-repack
+ * model — full stacks to the inventory, a ≤32-weight remainder to the fullest bundle that fits, a
+ * heavier remainder left loose, duplicate consolidation, lightest-first placement, and idempotency.
  *
  * Uses MockBukkit (via AbstractClickSortedTest) because BundleMeta is a server-side object.
  */
 class BundlePackerTest extends AbstractClickSortedTest {
+
+    // -------------------------------------------------------------------------
+    // Test helpers
+    // -------------------------------------------------------------------------
+
+    /** Build a bundle ItemStack pre-loaded with the given contents. */
+    private static ItemStack bundle(ItemStack... contents) {
+        ItemStack b = new ItemStack(Material.BUNDLE, 1);
+        if (contents.length > 0) {
+            BundleMeta meta = (BundleMeta) b.getItemMeta();
+            meta.setItems(Arrays.asList(contents));
+            b.setItemMeta(meta);
+        }
+        return b;
+    }
+
+    /** The contents of a bundle ItemStack. */
+    private static List<ItemStack> contents(ItemStack bundleItem) {
+        return ((BundleMeta) bundleItem.getItemMeta()).getItems();
+    }
+
+    /** Total amount of {@code mat} held inside a bundle. */
+    private static int bundleAmount(ItemStack bundleItem, Material mat) {
+        int total = 0;
+        for (ItemStack is : contents(bundleItem)) {
+            if (is != null && is.getType() == mat) total += is.getAmount();
+        }
+        return total;
+    }
+
+    /** Total amount of {@code mat} loose in a slot-aligned inventory list. */
+    private static int looseAmount(List<ItemStack> inv, Material mat) {
+        int total = 0;
+        for (ItemStack is : inv) {
+            if (is != null && is.getType() == mat) total += is.getAmount();
+        }
+        return total;
+    }
+
+    private static int looseSlots(List<ItemStack> inv, Material mat) {
+        int slots = 0;
+        for (ItemStack is : inv) {
+            if (is != null && is.getType() == mat) slots++;
+        }
+        return slots;
+    }
 
     // -------------------------------------------------------------------------
     // stackWeight
@@ -25,95 +73,51 @@ class BundlePackerTest extends AbstractClickSortedTest {
 
     @Test
     void stackWeight_fullStack64MaxSize_equalsAmount() {
-        // 64-stackable: 1 unit each → a stack of 10 = weight 10
         assertEquals(10, BundlePacker.stackWeight(new ItemStack(Material.COBBLESTONE, 10)));
     }
 
     @Test
     void stackWeight_partialStack16MaxSize() {
-        // 16-stackable (e.g. ender pearls): 4 units each → stack of 3 = weight 12
         assertEquals(12, BundlePacker.stackWeight(new ItemStack(Material.ENDER_PEARL, 3)));
     }
 
     @Test
     void stackWeight_fullStack64MaxSizeEquals64() {
-        // A full stack of cobblestone = 64 weight = fills exactly one bundle
         assertEquals(64, BundlePacker.stackWeight(new ItemStack(Material.COBBLESTONE, 64)));
     }
 
     // -------------------------------------------------------------------------
-    // bundleUsedWeight
+    // bundleUsedWeight / distinctEntries / isExistingEntry
     // -------------------------------------------------------------------------
-
-    @Test
-    void bundleUsedWeight_emptyBundle_zero() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta, "MockBukkit should provide BundleMeta for BUNDLE items");
-        assertEquals(0, BundlePacker.bundleUsedWeight(meta));
-    }
 
     @Test
     void bundleUsedWeight_withItems_sumsCorrectly() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-
-        // 10 cobblestone (weight 10) + 3 ender pearl (weight 12) = 22
-        meta.setItems(List.of(new ItemStack(Material.COBBLESTONE, 10), new ItemStack(Material.ENDER_PEARL, 3)));
-        assertEquals(22, BundlePacker.bundleUsedWeight(meta));
-    }
-
-    // -------------------------------------------------------------------------
-    // distinctEntries
-    // -------------------------------------------------------------------------
-
-    @Test
-    void distinctEntries_emptyBundle_zero() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        assertEquals(0, BundlePacker.distinctEntries(meta));
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 10), new ItemStack(Material.ENDER_PEARL, 3));
+        assertEquals(22, BundlePacker.bundleUsedWeight((BundleMeta) b.getItemMeta()));
     }
 
     @Test
     void distinctEntries_twoSameType_countsAsOne() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        meta.setItems(List.of(new ItemStack(Material.STONE, 5), new ItemStack(Material.STONE, 3)));
-        assertEquals(1, BundlePacker.distinctEntries(meta));
+        ItemStack b = bundle(new ItemStack(Material.STONE, 5), new ItemStack(Material.STONE, 3));
+        assertEquals(1, BundlePacker.distinctEntries((BundleMeta) b.getItemMeta()));
     }
 
     @Test
     void distinctEntries_twoDifferentTypes_countsAsTwo() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        meta.setItems(List.of(new ItemStack(Material.STONE, 5), new ItemStack(Material.DIRT, 3)));
-        assertEquals(2, BundlePacker.distinctEntries(meta));
+        ItemStack b = bundle(new ItemStack(Material.STONE, 5), new ItemStack(Material.DIRT, 3));
+        assertEquals(2, BundlePacker.distinctEntries((BundleMeta) b.getItemMeta()));
     }
-
-    // -------------------------------------------------------------------------
-    // isExistingEntry
-    // -------------------------------------------------------------------------
 
     @Test
     void isExistingEntry_matchingType_true() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        meta.setItems(List.of(new ItemStack(Material.GRAVEL, 10)));
-        assertTrue(BundlePacker.isExistingEntry(meta, new ItemStack(Material.GRAVEL, 5)));
+        ItemStack b = bundle(new ItemStack(Material.GRAVEL, 10));
+        assertTrue(BundlePacker.isExistingEntry((BundleMeta) b.getItemMeta(), new ItemStack(Material.GRAVEL, 5)));
     }
 
     @Test
     void isExistingEntry_differentType_false() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        meta.setItems(List.of(new ItemStack(Material.GRAVEL, 10)));
-        assertFalse(BundlePacker.isExistingEntry(meta, new ItemStack(Material.SAND, 5)));
+        ItemStack b = bundle(new ItemStack(Material.GRAVEL, 10));
+        assertFalse(BundlePacker.isExistingEntry((BundleMeta) b.getItemMeta(), new ItemStack(Material.SAND, 5)));
     }
 
     // -------------------------------------------------------------------------
@@ -138,7 +142,6 @@ class BundlePackerTest extends AbstractClickSortedTest {
 
     @Test
     void canBundle_nonStackable_false() {
-        // Tools have maxStackSize = 1 → excluded (no slot savings possible)
         assertFalse(BundlePacker.canBundle(new ItemStack(Material.DIAMOND_SWORD, 1)));
     }
 
@@ -148,241 +151,246 @@ class BundlePackerTest extends AbstractClickSortedTest {
     }
 
     // -------------------------------------------------------------------------
-    // pack — integration
+    // repack — remainder routing
     // -------------------------------------------------------------------------
 
     @Test
-    void pack_noBundles_returnsUnchanged() {
-        List<ItemStack> items = new ArrayList<>();
-        items.add(new ItemStack(Material.COBBLESTONE, 10));
-        items.add(new ItemStack(Material.DIRT, 5));
+    void repack_remainderAtMost32_goesIntoBundle() {
+        // 10 loose cobblestone (weight 10 ≤ 32) → the whole remainder lands in the bundle.
+        ItemStack b = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b, new ItemStack(Material.COBBLESTONE, 10)));
 
-        List<ItemStack> result = BundlePacker.pack(items, 12);
+        int freed = BundlePacker.repack(inv, List.of(), 0);
 
-        assertSame(items, result, "Without bundles the original list should be returned");
+        assertEquals(1, freed, "The loose stack's slot is freed");
+        assertNull(inv.get(1), "Loose cobblestone slot is cleared");
+        assertEquals(10, bundleAmount(inv.get(0), Material.COBBLESTONE), "Remainder is inside the bundle");
     }
 
     @Test
-    void pack_noPartials_returnsUnchanged() {
-        // Full stack of cobblestone = amount 64 = maxStackSize → not a partial
-        List<ItemStack> items = new ArrayList<>();
-        items.add(new ItemStack(Material.BUNDLE, 1));
-        items.add(new ItemStack(Material.COBBLESTONE, 64));
+    void repack_remainderOver32_staysLoose() {
+        // 44 loose cobblestone (weight 44 > 32) → stays loose; the bundle is left empty.
+        ItemStack b = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b, new ItemStack(Material.COBBLESTONE, 44)));
 
-        List<ItemStack> result = BundlePacker.pack(items, 12);
+        int freed = BundlePacker.repack(inv, List.of(), 0);
 
-        assertSame(items, result, "Without partial stacks the original list should be returned");
+        assertEquals(0, freed);
+        assertEquals(44, looseAmount(inv, Material.COBBLESTONE), "Heavy remainder stays loose");
+        assertTrue(contents(inv.get(0)).isEmpty(), "Bundle should not be spent on a >32 remainder");
     }
 
     @Test
-    void pack_partialAbsorbedIntoEmptyBundle() {
-        // 1 empty bundle + 1 partial stack of cobblestone → partial is packed, list shrinks by 1
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        ItemStack partial = new ItemStack(Material.COBBLESTONE, 10); // partial: 10 < 64
+    void repack_topsUpInventoryToFullStackFromBundle() {
+        // 50 loose + 20 in a bundle = 70 → one full inventory stack (64) and a 6-weight remainder
+        // pulled back into the bundle. (Requirement #3.)
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 20));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b, new ItemStack(Material.COBBLESTONE, 50)));
 
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(partial);
+        BundlePacker.repack(inv, List.of(), 0);
 
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        assertEquals(1, result.size(), "Partial should have been absorbed; list should shrink to 1 (the bundle)");
-        assertEquals(Material.BUNDLE, result.get(0).getType());
-
-        // Verify the bundle now contains the cobblestone
-        BundleMeta meta = (BundleMeta) result.get(0).getItemMeta();
-        assertNotNull(meta);
-        assertFalse(meta.getItems().isEmpty(), "Bundle should contain the packed cobblestone");
-        assertEquals(Material.COBBLESTONE, meta.getItems().get(0).getType());
-        assertEquals(10, meta.getItems().get(0).getAmount());
+        assertEquals(64, looseAmount(inv, Material.COBBLESTONE), "Inventory rounds up to a full stack");
+        assertEquals(1, looseSlots(inv, Material.COBBLESTONE), "Exactly one full loose stack");
+        assertEquals(6, bundleAmount(inv.get(0), Material.COBBLESTONE), "Bundle keeps the 6 remainder");
     }
 
     @Test
-    void pack_multiplePartialsAbsorbed() {
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        ItemStack partial1 = new ItemStack(Material.COBBLESTONE, 10); // weight 10
-        ItemStack partial2 = new ItemStack(Material.DIRT, 5);         // weight 5
+    void repack_consolidatesDuplicateBundleStacks_whenSumAtMost32() {
+        // Two bundles holding 10 + 15 of the same item → one bundle holds 25, the other empties.
+        ItemStack a = bundle(new ItemStack(Material.COBBLESTONE, 10));
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 15));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(a, b));
 
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(partial1);
-        items.add(partial2);
+        BundlePacker.repack(inv, List.of(), 0);
 
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        // Both partials should fit (total weight 15 << 64)
-        assertEquals(1, result.size(), "Both partials should be absorbed into the bundle");
-        BundleMeta meta = (BundleMeta) result.get(0).getItemMeta();
-        assertNotNull(meta);
-        assertEquals(2, BundlePacker.distinctEntries(meta));
+        int total = bundleAmount(inv.get(0), Material.COBBLESTONE) + bundleAmount(inv.get(1), Material.COBBLESTONE);
+        assertEquals(25, total, "All 25 retained across the bundles");
+        boolean oneEmpty = contents(inv.get(0)).isEmpty() || contents(inv.get(1)).isEmpty();
+        boolean oneHasAll = bundleAmount(inv.get(0), Material.COBBLESTONE) == 25
+                || bundleAmount(inv.get(1), Material.COBBLESTONE) == 25;
+        assertTrue(oneEmpty && oneHasAll, "25 should collapse into a single bundle stack");
     }
 
     @Test
-    void pack_bundleWeightLimitPreventsOverfill() {
-        // Bundle already has 60 weight consumed; try to pack a partial of weight 10 → won't fit
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        // 60 cobblestone = weight 60
-        meta.setItems(List.of(new ItemStack(Material.COBBLESTONE, 60)));
-        bundle.setItemMeta(meta);
+    void repack_consolidatesDuplicateBundleStacks_toInventoryWhenSumOver32() {
+        // Two bundles holding 15 + 20 = 35 (> 32) → 35 loose in the inventory, both bundles empty.
+        ItemStack a = bundle(new ItemStack(Material.COBBLESTONE, 15));
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 20));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(a, b, null, null));
 
-        ItemStack partial = new ItemStack(Material.DIRT, 10); // weight 10 — needs 10 free, only 4 left
+        BundlePacker.repack(inv, List.of(), 0);
 
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(partial);
-
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        assertSame(items, result, "Partial should not fit — weight would exceed 64");
+        assertEquals(35, looseAmount(inv, Material.COBBLESTONE), "Combined 35 lands loose");
+        assertEquals(1, looseSlots(inv, Material.COBBLESTONE), "As a single loose stack");
+        assertTrue(contents(inv.get(0)).isEmpty() && contents(inv.get(1)).isEmpty(), "Both bundles emptied");
     }
 
     @Test
-    void pack_entryCap_preventsExceedingLimit() {
-        // Bundle has 12 distinct entries already; a 13th entry with cap=12 must not be added
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
+    void repack_loneBundleRemainderStaysPut() {
+        // A lone 25-weight stack already in a bundle stays where it is (no churn).
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 25));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b, null));
 
-        // Fill bundle with 12 distinct items, 1 of each (weight 12 total)
-        List<ItemStack> bundleContents = new ArrayList<>();
-        Material[] mats = {
-            Material.COBBLESTONE, Material.DIRT, Material.SAND, Material.GRAVEL,
-            Material.OAK_LOG, Material.STONE, Material.DIORITE, Material.GRANITE,
-            Material.ANDESITE, Material.CLAY, Material.NETHERRACK, Material.SOUL_SAND
-        };
-        for (Material m : mats) {
-            bundleContents.add(new ItemStack(m, 1));
+        int freed = BundlePacker.repack(inv, List.of(), 0);
+
+        assertEquals(0, freed);
+        assertEquals(25, bundleAmount(inv.get(0), Material.COBBLESTONE), "Stays in the bundle");
+        assertEquals(0, looseAmount(inv, Material.COBBLESTONE), "Nothing loose");
+    }
+
+    // -------------------------------------------------------------------------
+    // repack — best-fit / lightest-first / current-bundle preference
+    // -------------------------------------------------------------------------
+
+    @Test
+    void repack_bestFitPicksFullerBundleThenFallsBackWhenItCannotFit() {
+        // Two empty bundles; three remainders of distinct 64-stack types: 20, 20, 30.
+        // Lightest-first: two 20s pile into bin #0 (best-fit prefers the fuller bin), then the 30
+        // no longer fits bin #0 (room 24 < 30) and lands in bin #1.
+        ItemStack a = bundle();
+        ItemStack b = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(a, b,
+                new ItemStack(Material.DIRT, 20),
+                new ItemStack(Material.SAND, 20),
+                new ItemStack(Material.COBBLESTONE, 30)));
+
+        BundlePacker.repack(inv, List.of(), 0);
+
+        assertEquals(40, BundlePacker.bundleUsedWeight((BundleMeta) inv.get(0).getItemMeta()),
+                "The two light remainders consolidate into the first bundle");
+        assertEquals(30, bundleAmount(inv.get(1), Material.COBBLESTONE),
+                "The heavy remainder spills into the second bundle when the first can't hold it");
+    }
+
+    @Test
+    void repack_lightestFirstAdmitsTwoLightOverOneHeavy() {
+        // One empty bundle (64 room). Remainders 30, 20, 20 (distinct types). Lightest-first packs
+        // both 20s (40), leaving no room for the 30, which stays loose — maximizing slots freed.
+        ItemStack b = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b,
+                new ItemStack(Material.COBBLESTONE, 30),
+                new ItemStack(Material.DIRT, 20),
+                new ItemStack(Material.SAND, 20),
+                null));
+
+        BundlePacker.repack(inv, List.of(), 0);
+
+        assertEquals(40, BundlePacker.bundleUsedWeight((BundleMeta) inv.get(0).getItemMeta()),
+                "Two 20-weight remainders fit");
+        assertEquals(30, looseAmount(inv, Material.COBBLESTONE), "The heavy 30 stays loose");
+    }
+
+    @Test
+    void repack_prefersCurrentBundle_noChurn() {
+        // Two bundles each holding a different item ≤32. Each remainder returns to its own bundle,
+        // even though after placing the first the second bundle could best-fit elsewhere.
+        ItemStack a = bundle(new ItemStack(Material.COBBLESTONE, 10));
+        ItemStack b = bundle(new ItemStack(Material.DIRT, 25));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(a, b));
+
+        BundlePacker.repack(inv, List.of(), 0);
+
+        assertEquals(10, bundleAmount(inv.get(0), Material.COBBLESTONE), "Cobblestone stays in its bundle");
+        assertEquals(25, bundleAmount(inv.get(1), Material.DIRT), "Dirt stays in its bundle");
+        assertEquals(0, bundleAmount(inv.get(0), Material.DIRT), "No churn into the other bundle");
+    }
+
+    // -------------------------------------------------------------------------
+    // repack — caps, idempotency, overflow
+    // -------------------------------------------------------------------------
+
+    @Test
+    void repack_entryCapFull_leavesRemainderLoose() {
+        // entryCap = 2; three distinct light remainders. Two fit; the third exceeds the cap → loose.
+        ItemStack b = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b,
+                new ItemStack(Material.COBBLESTONE, 5),
+                new ItemStack(Material.DIRT, 5),
+                new ItemStack(Material.SAND, 5),
+                null));
+
+        BundlePacker.repack(inv, List.of(), 2);
+
+        assertEquals(2, BundlePacker.distinctEntries((BundleMeta) inv.get(0).getItemMeta()),
+                "Only two entries fit under the cap");
+        int looseTotal = looseAmount(inv, Material.COBBLESTONE)
+                + looseAmount(inv, Material.DIRT) + looseAmount(inv, Material.SAND);
+        assertEquals(5, looseTotal, "The capped-out remainder stays loose");
+    }
+
+    @Test
+    void repack_isIdempotent() {
+        // A mixed scenario: a second run on the repacked layout changes nothing.
+        ItemStack a = bundle(new ItemStack(Material.COBBLESTONE, 10));
+        ItemStack b = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(a, b,
+                new ItemStack(Material.COBBLESTONE, 50),
+                new ItemStack(Material.DIRT, 15),
+                null, null));
+
+        BundlePacker.repack(inv, List.of(), 0);
+        List<ItemStack> snapshot = new ArrayList<>(inv);
+
+        int freedSecond = BundlePacker.repack(inv, List.of(), 0);
+
+        assertEquals(0, freedSecond, "A second run frees nothing");
+        assertEquals(snapshot.size(), inv.size());
+        for (int i = 0; i < snapshot.size(); i++) {
+            assertEquals(snapshot.get(i), inv.get(i), "Slot " + i + " unchanged on the second run");
         }
-        meta.setItems(bundleContents);
-        bundle.setItemMeta(meta);
-
-        ItemStack newPartial = new ItemStack(Material.GRAVEL, 5); // same type as one existing entry
-        // Wait: GRAVEL is already in the bundle, so it's an "existing entry" and should merge in
-        // Let's use a type NOT in the bundle
-        ItemStack newDistinctPartial = new ItemStack(Material.ENDER_PEARL, 2); // 13th distinct type
-
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(newDistinctPartial);
-
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        assertSame(items, result, "13th distinct entry should be rejected when cap=12");
     }
 
     @Test
-    void pack_existingEntryMergesWithoutCountingAgainstCap() {
-        // Bundle already has 12 entries; adding more of a type already in the bundle is allowed
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
+    void repack_overflowSpillsIntoEmptySlot() {
+        // A bundle holding two full stacks (128) and no loose copies → two full inventory stacks,
+        // each needing a free slot.
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 64), new ItemStack(Material.COBBLESTONE, 64));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b, null, null));
 
-        List<ItemStack> bundleContents = new ArrayList<>();
-        Material[] mats = {
-            Material.COBBLESTONE, Material.DIRT, Material.SAND, Material.GRAVEL,
-            Material.OAK_LOG, Material.STONE, Material.DIORITE, Material.GRANITE,
-            Material.ANDESITE, Material.CLAY, Material.NETHERRACK, Material.SOUL_SAND
-        };
-        for (Material m : mats) {
-            bundleContents.add(new ItemStack(m, 1));
-        }
-        meta.setItems(bundleContents);
-        bundle.setItemMeta(meta);
+        BundlePacker.repack(inv, List.of(), 0);
 
-        // Partial of COBBLESTONE — already an entry, should merge in even though cap=12 is reached
-        ItemStack sameTypePart = new ItemStack(Material.COBBLESTONE, 5);
-
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(sameTypePart);
-
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        assertEquals(1, result.size(), "Same-type partial should merge into existing entry");
-        BundleMeta resultMeta = (BundleMeta) result.get(0).getItemMeta();
-        assertNotNull(resultMeta);
-        // distinctEntries should still be 12
-        assertEquals(12, BundlePacker.distinctEntries(resultMeta));
+        assertEquals(128, looseAmount(inv, Material.COBBLESTONE), "Both full stacks land in the inventory");
+        assertEquals(2, looseSlots(inv, Material.COBBLESTONE), "Spread across two slots");
+        assertTrue(contents(inv.get(0)).isEmpty(), "Bundle emptied of full stacks");
     }
 
     @Test
-    void pack_entryCapZero_unlimitedEntries() {
-        // entryCap = 0 → weight-only limit; many distinct types should all pack in
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
+    void repack_overflowFallsBackToBundleWhenNoFreeSlot() {
+        // Same 128 in a bundle, but only one free inventory slot: one full stack goes loose, the
+        // excess stack falls back into the bundle rather than being dropped.
+        ItemStack b = bundle(new ItemStack(Material.COBBLESTONE, 64), new ItemStack(Material.COBBLESTONE, 64));
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(b, null));
 
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        // 13 distinct partial stacks, each weight 1 (total weight 13 << 64)
-        Material[] mats = {
-            Material.COBBLESTONE, Material.DIRT, Material.SAND, Material.GRAVEL,
-            Material.OAK_LOG, Material.STONE, Material.DIORITE, Material.GRANITE,
-            Material.ANDESITE, Material.CLAY, Material.NETHERRACK, Material.SOUL_SAND, Material.NETHER_BRICK
-        };
-        for (Material m : mats) {
-            items.add(new ItemStack(m, 1));
-        }
+        BundlePacker.repack(inv, List.of(), 0);
 
-        List<ItemStack> result = BundlePacker.pack(items, 0); // cap = 0 → unlimited
+        assertEquals(64, looseAmount(inv, Material.COBBLESTONE), "One full stack fits the lone free slot");
+        assertEquals(64, bundleAmount(inv.get(0), Material.COBBLESTONE), "The excess stays in the bundle");
+    }
 
-        assertEquals(1, result.size(), "All 13 partials should be packed when cap=0");
-        BundleMeta meta = (BundleMeta) result.get(0).getItemMeta();
-        assertNotNull(meta);
-        assertEquals(13, BundlePacker.distinctEntries(meta));
+    // -------------------------------------------------------------------------
+    // repack — hotbar bundles
+    // -------------------------------------------------------------------------
+
+    @Test
+    void repack_hotbarBundleAbsorbsMainItem() {
+        // A hotbar bundle is a valid bin: a 10-weight main remainder lands in it.
+        ItemStack hotbar = bundle();
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList((ItemStack) null, new ItemStack(Material.COBBLESTONE, 10)));
+        List<ItemStack> hotbarBundles = new ArrayList<>(List.of(hotbar));
+
+        int freed = BundlePacker.repack(inv, hotbarBundles, 0);
+
+        assertEquals(1, freed, "Main slot freed");
+        assertEquals(10, bundleAmount(hotbarBundles.get(0), Material.COBBLESTONE), "Hotbar bundle absorbed it");
+        assertEquals(0, looseAmount(inv, Material.COBBLESTONE));
     }
 
     @Test
-    void pack_stacksNotSplit() {
-        // A partial that cannot fit is left intact — it should not have its amount reduced
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        meta.setItems(List.of(new ItemStack(Material.COBBLESTONE, 60))); // 4 weight remaining
-        bundle.setItemMeta(meta);
+    void repack_noBundlesNoEligibleItems_returnsZero() {
+        List<ItemStack> inv = new ArrayList<>(Arrays.asList(
+                new ItemStack(Material.DIAMOND_SWORD, 1), null));
 
-        ItemStack tooBig = new ItemStack(Material.DIRT, 10); // weight 10 > 4 remaining
-
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(tooBig);
-
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        // The partial must remain in the list with its original amount
-        boolean found = result.stream().anyMatch(
-                is -> is != null && is.getType() == Material.DIRT && is.getAmount() == 10);
-        assertTrue(found, "Partial that cannot fit must remain whole (never split)");
-    }
-
-    @Test
-    void pack_partialAbsorbedIntoPartiallyFilledBundle() {
-        // Bundle already has some content; we top it up without emptying it first
-        ItemStack bundle = new ItemStack(Material.BUNDLE, 1);
-        BundleMeta meta = (BundleMeta) bundle.getItemMeta();
-        assertNotNull(meta);
-        meta.setItems(List.of(new ItemStack(Material.COBBLESTONE, 20))); // weight 20 used
-        bundle.setItemMeta(meta);
-
-        ItemStack partial = new ItemStack(Material.DIRT, 5); // weight 5
-
-        List<ItemStack> items = new ArrayList<>();
-        items.add(bundle);
-        items.add(partial);
-
-        List<ItemStack> result = BundlePacker.pack(items, 12);
-
-        assertEquals(1, result.size(), "Partial should be absorbed into the partially-filled bundle");
-
-        BundleMeta resultMeta = (BundleMeta) result.get(0).getItemMeta();
-        assertNotNull(resultMeta);
-        // Original cobblestone must still be there
-        boolean hasCobble = resultMeta.getItems().stream()
-                .anyMatch(is -> is != null && is.getType() == Material.COBBLESTONE);
-        assertTrue(hasCobble, "Existing bundle contents must be preserved");
-        // Dirt must have been added
-        boolean hasDirt = resultMeta.getItems().stream()
-                .anyMatch(is -> is != null && is.getType() == Material.DIRT);
-        assertTrue(hasDirt, "New partial must have been added to the bundle");
+        assertEquals(0, BundlePacker.repack(inv, List.of(), 0));
+        assertEquals(Material.DIAMOND_SWORD, inv.get(0).getType(), "Ineligible item untouched");
     }
 }
